// =====================================================================
// ERD v3 — Role 기반 확장형 SaaS Starter Kit
// dbdiagram.io 에 임포트해서 확인
// 코어(인증 · RBAC · 동적필드 · 감사)와 앱 모듈(병원 도메인)을 분리
// =====================================================================

Project hospital_record_viewer_v3 {
  database_type: 'PostgreSQL'
  Note: '''
    최종 목표: 관리자가 역할 추가 · 권한 조합 · 역할별 입력필드 정의 ·
    사용자 역할 변경만으로 코드 수정 없이 새 서비스를 운영하는 구조.
    API 접근 제어는 Role이 아니라 Permission 단위로 판정한다.
  '''
}

// ---------------------------------------------------------------------
// CORE · 인증
// ---------------------------------------------------------------------

Table users {
  id uuid [pk]
  email varchar(255) [unique, not null]
  created_at timestamptz [not null]

  Note: 'Supabase Auth 소유 — 직접 수정 금지. email의 단일 원본(source of truth)'
}

Table user_profiles {
  user_id uuid [pk]
  name varchar(100) [not null]
  avatar_url text
  is_active boolean [not null, default: true]
  must_change_password boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz

  Note: '''
    공통 프로필만 보관 (role_id 제거됨).
    email은 users에만 둔다 — 중복 보관 시 두 원본이 어긋나는 사고 방지.
    역할별 데이터는 profile_field_values 로.
  '''
}
Ref: user_profiles.user_id - users.id [delete: cascade]

// ---------------------------------------------------------------------
// CORE · RBAC (역할 · 권한)
// ---------------------------------------------------------------------

Table roles {
  id uuid [pk, default: `uuid_generate_v4()`]
  name varchar(50) [unique, not null, note: '의사 · 환자 · 관리자 · 원무과 …']
  description text
  is_system boolean [not null, default: false, note: 'true면 삭제·핵심권한 회수 불가 (관리자 잠금)']
  is_active boolean [not null, default: true, note: '비활성화 시 신규 부여 불가']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz

  Note: '관리자 화면에서 생성·수정. 사용자가 남아있는 역할은 삭제 불가(user_roles FK RESTRICT)'
}

Table permissions {
  id uuid [pk, default: `uuid_generate_v4()`]
  code varchar(100) [unique, not null, note: 'records:create 등 — 백엔드 코드가 검사하는 식별자']
  name varchar(100) [not null, note: '화면 표시명 (진료기록 작성)']
  category varchar(50) [note: '관리 화면 그룹핑 (사용자 · 진료기록 · 시스템 …)']
  description text
  created_at timestamptz [not null, default: `now()`]

  Note: '개발자 시드 전용 카탈로그. 관리자 화면에서는 읽기만 — 코드가 검사하지 않는 권한은 무의미하므로'
}

Table role_permissions {
  role_id uuid [not null]
  permission_id uuid [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (role_id, permission_id) [pk]
    permission_id
  }

  Note: '관리자가 체크박스로 조합'
}
Ref: role_permissions.role_id > roles.id [delete: cascade]
Ref: role_permissions.permission_id > permissions.id [delete: cascade]

Table user_roles {
  user_id uuid [not null]
  role_id uuid [not null]
  is_primary boolean [not null, default: false, note: '로그인 직후 기본 컨텍스트(홈·기본 메뉴). 사용자당 1개만 true (부분 유니크 인덱스)']
  assigned_by uuid [note: '누가 부여했는지 — 감사 추적']
  assigned_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, role_id) [pk]
    role_id
  }

  Note: '''
    User : Role = N : N.
    유효 권한 = 보유한 모든 역할의 권한 합집합(union).
  '''
}
Ref: user_roles.user_id > user_profiles.user_id [delete: cascade]
Ref: user_roles.role_id > roles.id [delete: restrict]
Ref: user_roles.assigned_by > users.id

// ---------------------------------------------------------------------
// CORE · 동적 필드 (노코드 폼 빌더)
// ---------------------------------------------------------------------

Enum field_type {
  text
  number
  date
  boolean
  phone
  email
  select        // options.choices 에서 단일 선택
  multiselect   // options.choices 에서 복수 선택 → value_json
  reference     // options.table 의 행을 참조 (예: departments)
  json          // 자유 구조
}

Table role_fields {
  id uuid [pk, default: `uuid_generate_v4()`]
  role_id uuid [not null]
  field_key varchar(50) [not null, note: '영문 키 (license_number)']
  label varchar(100) [not null, note: '폼 표시명 (면허번호)']
  field_type field_type [not null]
  is_required boolean [not null, default: false]
  is_unique boolean [not null, default: false, note: '역할 내 값 중복 금지 (면허번호 등). 백엔드 + 트리거로 강제']
  is_searchable boolean [not null, default: false, note: '검색 대상 여부 — 목록 검색 API가 이 플래그를 보고 검색 컬럼 구성']
  sort_order int [not null, default: 0]
  default_value text [note: '폼 초기값']
  placeholder varchar(200)
  help_text text [note: '입력란 아래 도움말']
  validation jsonb [note: '{"min_length":8, "max_length":50, "pattern":"^\\\\d{4}-...", "min":0, "max":150} 등']
  options jsonb [note: 'select/multiselect: {"choices":["A","B"]} · reference: {"table":"departments","label_column":"name"}']
  is_active boolean [not null, default: true, note: '삭제 대신 숨김 — 기존 저장값 보존']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz

  indexes {
    (role_id, field_key) [unique]
    (role_id, sort_order)
  }

  Note: '관리자 화면의 폼 빌더 정의. 계정 발급/수정 폼은 이 정의를 읽어 동적 렌더링'
}
Ref: role_fields.role_id > roles.id [delete: cascade]

Table profile_field_values {
  id uuid [pk, default: `uuid_generate_v4()`]
  user_id uuid [not null]
  role_field_id uuid [not null]
  value_text text
  value_number numeric
  value_date date
  value_boolean boolean
  value_json jsonb
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz

  indexes {
    (user_id, role_field_id) [unique, note: '사용자당 필드 하나에 값 하나']
    (role_field_id, value_text) [note: 'is_searchable / is_unique 지원']
    (role_field_id, value_number)
    (role_field_id, value_date)
  }

  Note: '''
    사용자가 입력한 실제 값 (user → role_field → value).
    field_type에 맞는 typed 컬럼 하나에만 저장하고 나머지는 NULL (백엔드 강제).
    typed 컬럼 방식이라 타입별 인덱스·정렬·범위검색·유니크 검증이 DB 수준에서 가능.
  '''
}
Ref: profile_field_values.user_id > user_profiles.user_id [delete: cascade]
Ref: profile_field_values.role_field_id > role_fields.id [delete: restrict]

// ---------------------------------------------------------------------
// APP MODULE · 병원 도메인 (스타터 킷 위의 예시 애플리케이션)
// ---------------------------------------------------------------------

Table departments {
  id uuid [pk, default: `uuid_generate_v4()`]
  name varchar(50) [unique, not null]
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz

  Note: '앱 모듈 마스터 데이터. role_fields의 reference 대상 예시 (의사 → 소속 진료과)'
}

Table examination_rooms {
  id uuid [pk, default: `uuid_generate_v4()`]
  department_id uuid [not null]
  room_number varchar(20) [not null]
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz

  indexes {
    (department_id, room_number) [unique]
  }
}
Ref: examination_rooms.department_id > departments.id

Table medical_records {
  id uuid [pk, default: `uuid_generate_v4()`]
  patient_user_id uuid [not null, note: '환자 여부는 테이블 소속이 아니라 권한(records:read_own)으로 판정']
  doctor_user_id uuid [not null, note: '작성 자격은 records:create 권한으로 판정']
  room_id uuid
  visited_at timestamptz [not null, note: '수정 불가']
  chief_complaint text
  diagnosis text [not null]
  prescription text
  is_corrected boolean [not null, default: false]
  correction_note text
  corrected_at timestamptz
  created_at timestamptz [not null, default: `now()`]

  indexes {
    patient_user_id
    doctor_user_id
    visited_at
  }

  Note: '삭제 불가(append-only) · 오기입 시 정정기록 원칙 그대로 유지'
}
Ref: medical_records.patient_user_id > user_profiles.user_id
Ref: medical_records.doctor_user_id > user_profiles.user_id
Ref: medical_records.room_id > examination_rooms.id

// ---------------------------------------------------------------------
// CORE · 감사 로그 (모듈 공용으로 일반화)
// ---------------------------------------------------------------------

Table access_logs {
  id uuid [pk, default: `uuid_generate_v4()`]
  user_id uuid [not null]
  resource_type varchar(50) [not null, note: '일반화: medical_record · user · role … 어떤 모듈 자원이든 기록']
  resource_id uuid [note: 'NULL = 목록 조회']
  action varchar(50) [not null, note: 'view_list · view_detail · create · update · role_change …']
  ip_address inet
  created_at timestamptz [not null, default: `now()`]

  indexes {
    user_id
    (resource_type, resource_id)
    created_at
  }

  Note: 'Append-only (수정·삭제 불가). 기존 record_id FK → resource_type + resource_id 다형 참조로 일반화'
}
Ref: access_logs.user_id > users.id
